--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Peopleswave">
-        <activity android:name=".Home_activity"></activity>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Home_activity" />
+
+        <activity android:name=".MainActivity"/>
+
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
